[package]
name = "link-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.4"
headless_chrome = { version = "1.0.15", features = ["fetch"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
lazy-regex = "3.4.1"
derive_more = { version = "2.0.1", features = ["from", "display"] }
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.86"
